--- a/config.yml
+++ b/config.yml
@@ -41,8 +41,8 @@ params:
   comments: false
   hidemeta: false
   hideSummary: false
-  showtoc: false
-  tocopen: false
+  showtoc: true
+  tocopen: true
 
   assets:
     # disableHLJS: true # to disable highlight.js
@@ -110,7 +110,7 @@ params:
     shouldSort: true
     location: 0
     distance: 1000
-    threshold: 0.4
+    threshold: 0.1
     minMatchCharLength: 0
     keys: ["title", "permalink", "summary", "content"]
 
