--- a/config.yml
+++ b/config.yml
@@ -87,7 +87,7 @@ params:
 
   analytics:
     google:
-      SiteVerificationTag: "XYZabc"
+      SiteVerificationTag: "G-J560LHJW6W"
     bing:
       SiteVerificationTag: "XYZabc"
     yandex:
