--- a/config.yml
+++ b/config.yml
@@ -10,7 +10,7 @@ buildDrafts: false
 buildFuture: false
 buildExpired: false
 
-googleAnalytics: UA-123-45
+googleAnalytics: G-J560LHJW6W
 
 minify:
   disableXML: true
