--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
 baseURL: "https://www.insecure.pt/"
-title: "{in}secure"
+title: "{in}secure PT"
 paginate: 5
 theme: PaperMod
 
@@ -18,7 +18,7 @@ minify:
 
 params:
   env: production # to enable google analytics, opengraph, twitter-cards and schema.
-  title: "{in}secure"
+  title: "{in}secure PT"
   description: "ExampleSite description"
   keywords: [Blog, Portfolio, PaperMod]
   #author: Gonçalo Pires
@@ -32,7 +32,7 @@ params:
   ShowShareButtons: true
   ShowPostNavLinks: true
   ShowBreadCrumbs: true
-  ShowCodeCopyButtons: false
+  ShowCodeCopyButtons: true
   ShowWordCount: true
   ShowRssButtonInSectionTermList: true
   UseHugoToc: true
@@ -47,22 +47,22 @@ params:
   assets:
     # disableHLJS: true # to disable highlight.js
     # disableFingerprinting: true
-    favicon: "<link / abs url>"
-    favicon16x16: "<link / abs url>"
-    favicon32x32: "<link / abs url>"
-    apple_touch_icon: "<link / abs url>"
-    safari_pinned_tab: "<link / abs url>"
+    #favicon: "<link / abs url>"
+    #favicon16x16: "<link / abs url>"
+    #favicon32x32: "<link / abs url>"
+    #apple_touch_icon: "<link / abs url>"
+    #safari_pinned_tab: "<link / abs url>"
 
   label:
-    text: "{in}secure"
-    icon: /apple-touch-icon.png
-    iconHeight: 35
+    text: "{in}secure PT"
+    #icon: /apple-touch-icon.png
+    #iconHeight: 35
 
   # profile-mode
   profileMode:
     enabled: true # needs to be explicitly set
-    title: "Information Security"
-    #subtitle: "Information Security Dumps"
+    title: "Segurança de Informação"
+    #subtitle: "Dumps"
     #imageUrl: https://avatars.githubusercontent.com/u/1218044?v=4
     imageWidth: 120
     imageHeight: 120
