--- a/config.yml
+++ b/config.yml
@@ -62,7 +62,7 @@ params:
   profileMode:
     enabled: true # needs to be explicitly set
     title: "Segurança de Informação"
-    subtitle: "Todo o conteúdo aqui apresentado é para fins educacionais onde são demonstrados alguns vectores de ataque assim como a sua defesa. Este portal contem informação perigosa que NÃO PODE SER USADA contra nenhuma pessoa/empresa/instituição. Caso não entenda o propósito SAIA IMEDIATAMENTE deste portal."
+    subtitle: "Todo o conteúdo aqui apresentado é para fins educativos onde são demonstrados alguns vectores de ataque assim como a sua defesa. Este portal contem informação perigosa que NÃO PODE SER USADA contra nenhuma pessoa/empresa/instituição. Caso não entenda o propósito SAIA IMEDIATAMENTE deste portal."
     #imageUrl: https://avatars.githubusercontent.com/u/1218044?v=4
     imageWidth: 120
     imageHeight: 120
